rectification des item (style)

--- a/templates/images/item2_2/item2_2.html.twig
+++ b/templates/images/item2_2/item2_2.html.twig
@@ -6,7 +6,7 @@
 {% block updateButtonLink %}{{ path('UpdateItem2.2') }}{% endblock updateButtonLink %}
 
 
-{% block secondarytxt %}item2.2{% endblock secondarytxt %}
+{% block secondarytxt %}Item 2.2{% endblock secondarytxt %}
 
 {% block downloadButtonLink %}{{ path('itemDownload2.2') }}{% endblock %}
 
