MIse à niveau de toutes les fonctions
rajout des erasesmodale
refonte des routes
rajout des fonctions erase et destroy
style de pli en css pour les thumbnails

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,11 +63,11 @@
 
 
                     <li class="dropdown  nav-item {% block item0002Active %}{% endblock %}">
-                        <a class=" dropdown-toggle nav-link" role="link" id="dropdownMenuLink" data-toggle="dropdown"  aria-haspopup="false" aria-expanded="true" href="{{ path('item2.1') }}">{% block item0002 %}Item2{% endblock item0002 %}</a>
+                        <a class=" dropdown-toggle nav-link" role="link" id="dropdownMenuLink" data-toggle="dropdown"  aria-haspopup="false" aria-expanded="true" href="{{ path('item2_1') }}">{% block item0002 %}Item2{% endblock item0002 %}</a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="{% block item0002Link %}{{ path('item2.1') }}{% endblock item0002Link %}">Item2.1</a>
-                            <a class="dropdown-item" href="{% block item0003Link %}{{ path('item2.2') }}{% endblock item0003Link %}">Item2.2</a>
+                            <a class="dropdown-item" href="{% block item0002Link %}{{ path('item2_1') }}{% endblock item0002Link %}">Item2.1</a>
+                            <a class="dropdown-item" href="{% block item0003Link %}{{ path('item2_2') }}{% endblock item0003Link %}">Item2.2</a>
 
                         </div>
 
