--- a/templates/images/item1/downloadItem1.html.twig
+++ b/templates/images/item1/downloadItem1.html.twig
@@ -1,7 +1,7 @@
 {% extends "download.html.twig" %}
 
 
-{% block path %}{{ path('item1Upload') }}{% endblock %}
+{% block path %}{{ path('UploadItem1') }}{% endblock %}
 
 {% block item0001Active %}active{% endblock %}
 
