--- a/templates/images/item1/item1.html.twig
+++ b/templates/images/item1/item1.html.twig
@@ -5,7 +5,8 @@
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('zoombox/zoombox.css') }}">
     <link rel="stylesheet" href="{{ asset('css/rounded.css') }}">
-   {#<link rel="stylesheet" href="{{ asset('css/images.css') }}">#}
+    <link rel="stylesheet" href="{{ asset('css/clone2.css') }}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 {% endblock stylesheet %}
 
 {% block updateButtonLink %}{{ path('UpdateItem1') }}{% endblock updateButtonLink %}
@@ -18,7 +19,7 @@
 {% endblock test %}
 
 
-{% block downloadButtonLink %}{{ path('item1Download') }}{% endblock %}
+{% block downloadButtonLink %}{{ path('downloadItem1') }}{% endblock %}
 
 {% block secondarytxt %}Item 1{% endblock secondarytxt %}
 
@@ -33,13 +34,37 @@
 
     {% for thumb in thumbs %}
 
-        <div  class="col-lg-3 col-md-4 col-xs-6  thumbs" >
+        <article class="fold ">
+            <div id="divThumb" class="top">
+                <img id="thumb" class="img-fluid img-thumbnail thumbs "
+                     src="{% block levelLinkThumbs %}{% endblock levelLinkThumbs %}{{ thumb.dirname }}{{ thumb.basename }}"
+                     title="{{ thumb.basename }} " alt=""></div>
 
-            <a href="{% block levelLink %}{% endblock levelLink %}img/{% block item %}item1{% endblock item %}/{{ thumb.basename }}" rel="zoombox[{% block zoomboxVille %}item1{% endblock zoomboxVille %}]">
-                <img id="thumb" class="img-fluid img-thumbnail thumbs " src="{% block levelLinkThumbs %}{% endblock levelLinkThumbs %}{{ thumb.dirname }}{{ thumb.basename }}" alt="">
-            </a>
+            <h2>
+                <a href="{% block levelLink %}{% endblock levelLink %}img/{% block item %}{{ path('item1') }}{% endblock item %}/{{ thumb.basename }}"
+                   rel="zoombox[{% block zoomboxVille %}item{% endblock zoomboxVille %}]"><i class="far fa-eye"
+                                                                                                  style="color: #1E90FF; margin-right: 12px; "></i>
 
-        </div>
+                </a>
+
+
+
+
+
+
+                <a href="{% block eraseItem %}{{ path('EraseItem1', {'basename': thumb.getBasename,'id': thumb.getId ,'images_id': thumb.getImagesId } ) }}{% endblock eraseItem %}"><i class="fas fa-trash" style="color: #F00;"></i>
+                </a>
+
+
+            </h2>
+            <div class="bot">
+                <img id="thumb" class="img-fluid img-thumbnail thumbs "
+                     src="{% block levelLinkThumbs2 %}{% endblock levelLinkThumbs2 %}{{ thumb.dirname }}{{ thumb.basename }}"
+                     title="{{ thumb.basename }} " alt="">
+            </div>
+
+        </article>
+
 {% endfor %}
 {% endblock thumbnails %}
 
