--- a/templates/images/item2_1/downloadItem2_1.html.twig
+++ b/templates/images/item2_1/downloadItem2_1.html.twig
@@ -3,12 +3,12 @@
 
 
 {% block path %}
-    {{ path('fursUploadWomen') }}
+    {{ path('UploadItem2_1') }}
 {% endblock %}
 
 {% block item0002Active %}active{% endblock %}
 
-{% block legendItem %}Fourrure Femmes{% endblock legendItem %}
+{% block legendItem %}Item2_1{% endblock legendItem %}
 
 
 {% block footer %}{% endblock %}
