--- a/templates/images/item2_1/successItem2_1.html.twig
+++ b/templates/images/item2_1/successItem2_1.html.twig
@@ -1,3 +1,6 @@
 {% extends "success.html.twig" %}
 
-{% block pathSuccess %}{{ path('item2.1') }}{% endblock pathSuccess %}
+{% block pathSuccess %}{{ path('item2_1') }}{% endblock pathSuccess %}
+{% block eraseItem %}
+    {{ path('EraseItem2_1', {'basename': thumb.basename,'id': thumb.getId ,'images_id': thumb.getImagesId } ) }}
+{% endblock %}
