--- a/templates/images/item2_2/downloadItem2_2.html.twig
+++ b/templates/images/item2_2/downloadItem2_2.html.twig
@@ -3,7 +3,7 @@
 
 
 {% block path %}
-    {{ path('fursUploadMen') }}
+    {{ path('UpdateItem2_2') }}
 {% endblock %}
 
 {% block item0002Active %}active{% endblock %}
