--- a/templates/images/item2_2/item2_2.html.twig
+++ b/templates/images/item2_2/item2_2.html.twig
@@ -3,13 +3,15 @@
 
 {% block title %}item2.2{% endblock %}
 
-{% block updateButtonLink %}{{ path('UpdateItem2.2') }}{% endblock updateButtonLink %}
+{% block updateButtonLink %}{{ path('UpdateItem2_2') }}{% endblock updateButtonLink %}
 
 
 {% block secondarytxt %}Item 2.2{% endblock secondarytxt %}
 
-{% block downloadButtonLink %}{{ path('itemDownload2.2') }}{% endblock %}
+{% block downloadButtonLink %}{{ path('downloadItem2_2') }}{% endblock %}
 
 {% block item %}item2_2{% endblock item %}
 
-{#{% block src %}src=""{% endblock src %}#}
+{% block eraseItem %}
+    {{ path('EraseItem2_2', {'basename': thumb.basename,'id': thumb.getId ,'images_id': thumb.getImagesId } ) }}
+{% endblock %}
