--- a/public/css/rounded.css
+++ b/public/css/rounded.css
@@ -1,3 +1,13 @@
 .thumbs{
     border-radius: 50%;
 }
+
+.disabledCross{
+     display: none !important;
+ }
+
+
+.visibleCross{
+    display: flex !important;
+
+}
