--- a/templates/images/item2_2/successItem2_2.html.twig
+++ b/templates/images/item2_2/successItem2_2.html.twig
@@ -1,3 +1,3 @@
 {% extends "success.html.twig" %}
 
-{% block pathSuccess %}{{ path('item2.2') }}{% endblock pathSuccess %}
+{% block pathSuccess %}{{ path('item2_2') }}{% endblock pathSuccess %}
