Mise à jour de la version
Suppression des fichiers et fonctions inutiles

--- a/templates/erase.html.twig
+++ b/templates/erase.html.twig
@@ -1,4 +1,4 @@
-{% extends "images/item2_1/downloadItem2_1.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block stylesheet %}
     {{ parent() }}
