--- a/templates/images/item2_1/eraseItem2_1.html.twig
+++ b/templates/images/item2_1/eraseItem2_1.html.twig
@@ -1,7 +1,7 @@
 {% extends "erase.html.twig" %}
 
 
-{% block updateButtonLink %}{{path('UploadItem2_1')}}{% endblock %}
+{% block updateButtonLink %}{{path('UpdateItem2_1')}}{% endblock %}
 
 
 {% block pathSuccess %}{{path('item2_1')}}{% endblock %}
