--- a/templates/images/item2_2/eraseItem2_2.html.twig
+++ b/templates/images/item2_2/eraseItem2_2.html.twig
@@ -1,7 +1,7 @@
 {% extends "erase.html.twig" %}
 
 
-{% block updateButtonLink %}{{path('Uploaditem2_2')}}{% endblock %}
+{% block updateButtonLink %}{{path('UpdateItem2_2')}}{% endblock %}
 
 
 {% block pathSuccess %}{{path('item2_2')}}{% endblock %}
